Name:                     ioctl
Version:                  0.0.2
Synopsis:                 Type-safe I/O control package
Description:              Package allowing type-safe I/O control
Category:                 Data, System
License:                  MIT
License-file:             LICENSE
Author:                   Maciej Piechotka <uzytkownik2@gmail.com>
Maintainer:               ners@gmx.ch
Build-Type:               Simple
Cabal-Version:            >=1.4

Library
  Build-Depends:          base >= 3 && < 5,
                          network >= 3.1
  Exposed-Modules:        Network.Socket.IOCtl
  Other-Modules:          System.IOControl
  Extensions:             FunctionalDependencies,
                          MultiParamTypeClasses
  HS-Source-Dirs:         src
  GHC-Options:            -Wall

  if !os(windows)
    Build-Depends:        unix
    Exposed-Modules:      System.Posix.IOCtl
    Extensions:           ForeignFunctionInterface
    HS-Source-Dirs:       src-unix
